@@ -1,3 +1,8 @@
+2017-07-27 Hanna Knutsson <hanna.knutsson@protonmail.com>
+
+	* Fix engineering exp mode in qalc and allow divisors other than 3
+	* Do not round digits before decimal point for exact values with exp mode off
+
 2017-07-26 Hanna Knutsson <hanna.knutsson@protonmail.com>
 
 	* Fix round halfway to even with non-integers
